we'll have some work to do, but this is a good start for the android install in the build process

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     environment:
       GPU_TARGET: swiftshader_indirect
       EMULATOR_RESOLUTION: 720x1280
