we'll need to just fix the entrypoint and validate some paths, though android sdk seems to have installed fine or without exit code anyway. From here, we can basically clean up and maybe implement an optional ovpn volume binding/var and when present, we whip up a quick split-tun on the container host.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   incognit0_ziomek:
     container_name: incognit0_ziomek
-    network_mode: "host"   
+    # network_mode: "host"   
     build:
       context: .
       dockerfile: Dockerfile
