--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   incognit0_ziomek:
     container_name: incognit0_ziomek
-    image: masonville17/incognit0_ziomek:Pixel_4_API_30_playstore # exclude if building locally
+    # image: masonville17/incognit0_ziomek # exclude if building locally
     cap_add:
       - NET_ADMIN 
-    # build: Needed only if building locally
-    #   context: .
-    #   dockerfile: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     env_file:
       - .env
     environment:
@@ -16,8 +16,8 @@ services:
       EMULATOR_DENSITY: 240
       AVD_DEVICE: Pixel_4_API_30_google_apis_playstore_x86_64
       CPU_CORES: 4
-      RAM_SIZE: 4096M
-      DISK_SIZE: 32G
+      RAM_SIZE: 12288M
+      DISK_SIZE: 64G
       ENABLE_AUDIO: true
       OVPN_FILE: vpn_host.ovpn
       NETWORK_SPEED: full
@@ -30,3 +30,9 @@ services:
       - "/dev/net/tun:/dev/net/tun" # Tunnel interface binding to container host for VPN
     privileged: true
     restart: always
+    ports:
+      - 5800:5800
+      - 5555:5555
+      - 5999:5999
+      - 5900:5900
+    # network_mode: host
