I had to tweak a few things for it to fully start up. I apologize for any inconvenience, but its back to earlier working state

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       EMULATOR_DENSITY: 240
       AVD_DEVICE: Pixel_4_API_30_google_apis_playstore_x86_64
       CPU_CORES: 4
-      RAM_SIZE: 12288M
-      DISK_SIZE: 64G
+      RAM_SIZE: 65536
+      DISK_SIZE: 64
       ENABLE_AUDIO: true
       OVPN_FILE: vpn_host.ovpn
       NETWORK_SPEED: full
